added password change functionality

--- a/ChatWave/Chat/templates/chat/chathome.html
+++ b/ChatWave/Chat/templates/chat/chathome.html
@@ -52,18 +52,12 @@
 
 
             <div class="music-player">
-
-              
-                 
-                    <img src="https://i.pinimg.com/736x/05/0d/f8/050df8ccc13065372138e7dfb61f444e.jpg" alt="Album Art" class="album-art">
+         <img src="https://i.pinimg.com/736x/4c/d2/a6/4cd2a6615820a4a15f4d85de7762251d.jpg" alt="Album Art" class="album-art">
                     <div class="track-info">
-                        <h3>Fourth Of July</h3>
+                        <h3>Logged in as, {{request.user.username}}</h3>
                         <p>Sufjan Stevens</p>
                     </div>
-                    <audio controls>
-                        <source src="{{ songs.song.url }}" type="audio/mpeg">
-                        Your browser does not support the audio element.
-                    </audio>
+
                    
               
                 </div>
